--- a/hx170218-李彩霞-0310扫雷小米计算器二分/扫雷/web/mine.html
+++ b/hx170218-李彩霞-0310扫雷小米计算器二分/扫雷/web/mine.html
@@ -10,20 +10,22 @@
 <div id="set">
     <p>选择自定义游戏板参数：</p>
     <label for="setWidth">宽度</label>
-    <input type="text" placeholder="请输入游戏板块格子数" id="setWidth" value="10">
+    <input type="text" placeholder="请输入游戏板块格子数" id="setWidth" value="5">
     <br/>
     <br/>
     <label for="setHeight">高度</label>
-    <input type="text" placeholder="请输入游戏板块格子数" id="setHeight" value="10">
+    <input type="text" placeholder="请输入游戏板块格子数" id="setHeight" value="5">
     <br/>
     <br/>
     <label for="setMine">雷数</label>
-    <input type="text" placeholder="请输入雷的个数" id="setMine" value="10">
+    <input type="text" placeholder="请输入雷的个数" id="setMine" value="5">
     <br/>
     <br/>
     <button id="start" class="start">开始游戏</button>
 </div>
-<div id="frame" style="display: none"></div>
+<div id="frame" style="display: none">
+    <p><span>剩余的雷数：</span><span class="mineNum"></span></p>
+</div>
 
 </body>
 </html>
